@@ -1,3 +1,13 @@
+1998-08-27  Alex Roberts  <bse@dial.pipex.com>
+
+	* gedit.c:
+	* toolbar.c: Removed annoying Debug code...
+
+1998-08-26  Alex Roberts  <bse@dial.pipex.com>
+	
+	* toolbar.c: Removed occerences of Document List window Toolbar 
+	  settings (This was making gEdit sigsegv: Gdk-window: sigsegv..)...
+	  
 1998-08-26  Martin Baulig  <martin@home-of-linux.org>
 
 	* configure.in: Define `WITHOUT_GNOME' if we don't have GNOME.
